--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -7,3 +7,17 @@
 .card-img-item {
   height: 200px !important;
 }
+
+.header-logo {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  margin-right: 4px;
+}
+
+.user-avatar {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  margin-right: 4px;
+}
