--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,17 +1,34 @@
 <nav data-bs-theme="dark" class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Blog</a>
+  <div class="container">
+    <a class="navbar-brand" href="/">
+      <img src="/img/logo.png" class="header-logo" alt="">
+      Blog
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 navbar-right">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <img
+              src="https://scontent.fvii1-1.fna.fbcdn.net/v/t39.30808-1/425471949_1070563117538826_744622395474154621_n.jpg?stp=cp6_dst-jpg_s200x200&_nc_cat=110&ccb=1-7&_nc_sid=0ecb9b&_nc_eui2=AeHZj4r_WvG3pYhILiPyou4Cje4ALeoqvAiN7gAt6iq8CPqC0HBhSPgvRzEkeaQvXIkBfJ3Nasbqh9HuvFPxyBL3&_nc_ohc=vx4ULyHXOY8Q7kNvgHbAI7M&_nc_ht=scontent.fvii1-1.fna&oh=00_AYDdNstx4adShRsBEp4aedibhBId-4N2rEGxmDcMt9u9oA&oe=66FC70DF"
+              alt="" class="user-avatar">
+            Ân Bùi
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/courses/create">Đăng khóa học</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="/me/stored/courses">Khóa học của tôi</a></li>
+            <li><a class="dropdown-item" href="/me/stored/news">Bài viết của tôi</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#">Đăng xuất</a></li>
+          </ul>
         </li>
       </ul>
     </div>
