--- a/src/resources/views/me/stored-courses.hbs
+++ b/src/resources/views/me/stored-courses.hbs
@@ -20,7 +20,8 @@
         <td>{{this.createdAt}}</td>
         <td>
           <a href="/courses/{{this._id}}/edit" class="btn btn-link">Sửa</a>
-          <a href="/" class="btn btn-link">Xóa</a>
+          <a href="/" class="btn btn-link" data-id="{{this._id}}" data-bs-toggle="modal"
+            data-bs-target="#delete-course-modal">Xóa</a>
         </td>
       </tr>
       {{/each}}
@@ -28,3 +29,51 @@
     </tbody>
   </table>
 </div>
+
+{{!-- Confirm delete course --}}
+<div id="delete-course-modal" class="modal fade" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Xóa khóa học?</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Bạn chắc chắn muốn xóa khóa học này?</p>
+      </div>
+      <div class="modal-footer">
+        <button id="btn-delete-course" type="button" class="btn btn-danger">Xóa bỏ</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+{{!-- Delete hidden form --}}
+<form name="delete-course-form" method="post"></form>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    var courseId
+    const btnDeleteCourse = document.getElementById('btn-delete-course')
+    var deleteForm = document.forms['delete-course-form']
+    const deleteCourseModal = document.getElementById('delete-course-modal')
+
+    // When dialog confirm clicked
+    if (deleteCourseModal) {
+      deleteCourseModal.addEventListener('show.bs.modal', event => {
+        const button = event.relatedTarget
+        courseId = button.getAttribute('data-id')
+      })
+    }
+
+    // When delete course btn clicked
+    if (btnDeleteCourse) {
+      btnDeleteCourse.onclick = () => {
+        deleteForm.action = `/courses/${courseId}?_method=DELETE`
+        deleteForm.submit()
+      }
+    }
+
+  })
+</script>
